--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Swift
+name: "Build and Test"
 
 on:
   push:
@@ -12,6 +12,9 @@ jobs:
     runs-on: macos-latest
 
     steps:
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: latest
     - uses: actions/checkout@v3
     - name: Build
       run: swift build -v
