--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,4 @@
-name: "Build and Test"
-
+name: "Execute Unit Tests"
 on:
   push:
     branches: [ "main" ]
@@ -7,16 +6,14 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  run_tests:
     runs-on: macos-12
-
+    name: "Execute Unit Tests"
     steps:
-    - uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: '14.0-beta'
     - uses: actions/checkout@v3
-    - name: Build
-      run: swift build -v
-    - name: Run tests
-      run: swift test -v
+    - name: "Xcode Select"
+      run: sudo xcode-select -switch /Applications/Xcode_14.0.app && /usr/bin/xcodebuild -version
+    - name: "Generate Project"
+      run: swift package generate-xcodeproj
+    - name: "iOS16: Unit Tests"
+      run: xcodebuild test -project Umbrella.xcodeproj -scheme Umbrella-Package -sdk iphonesimulator16.0 -destination "OS=16.0,name=iPhone 13"
