--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,15 @@ jobs:
     name: "Execute Unit Tests"
     steps:
     - uses: actions/checkout@v3
-    - name: "Xcode Select"
+    - name: "Xcode 14.0: Select"
       run: sudo xcode-select -switch /Applications/Xcode_14.0.app && /usr/bin/xcodebuild -version
-    - name: "Generate Project"
-      run: swift package generate-xcodeproj
-    - name: "iOS16: Unit Tests"
-      run: xcodebuild test -project Umbrella.xcodeproj -scheme Umbrella-Package -sdk iphonesimulator16.0 -destination "OS=16.0,name=iPhone 13"
+    - name: "macOS 13: Unit Tests"
+      run: xcodebuild test -scheme Umbrella-Package -sdk macosx13.0 -destination "platform=macOS,arch=x86_64"
+    - name: "iOS 16: Unit Tests"
+      run: xcodebuild test -scheme Umbrella-Package -sdk iphonesimulator16.0 -destination "OS=16.0,name=iPhone 8"
+    ##- name: "Download watchOS 9 and tvOS 16"
+    ##  run: xcodebuild -downloadAllPlatforms
+    - name: "watchOS 9: Unit Tests"
+      run: xcodebuild test -scheme Umbrella-Package -sdk watchsimulator9.0 -destination "OS=9.0,name=Apple Watch Series 5 - 40mm"
+    - name: "tvOS 16: Unit Tests"
+      run: xcodebuild test -scheme Umbrella-Package -sdk appletvsimulator16.0 -destination "OS=16.0,name=Apple TV 4K (2nd generation)"
