--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: "Execute Unit Tests"
+name: "Automatic: Unit Tests: Xcode 14, iOS 16, macOS 13"
 on:
   push:
     branches: [ "main" ]
@@ -19,9 +19,3 @@ jobs:
       run: xcodebuild test -scheme Umbrella-Package -sdk macosx13.0 -destination "platform=macOS,arch=x86_64,variant=Mac Catalyst"
     - name: "iOS 16"
       run: xcodebuild test -scheme Umbrella-Package -sdk iphonesimulator16.0 -destination "OS=16.0,name=iPhone 8"
-    - name: "Download watchOS 9 and tvOS 16"
-      run: xcodebuild -downloadAllPlatforms
-    - name: "watchOS 9"
-      run: xcodebuild test -scheme Umbrella-Package -sdk watchsimulator9.0 -destination "OS=9.0,name=Apple Watch Series 5 - 40mm"
-    - name: "tvOS 16"
-      run: xcodebuild test -scheme Umbrella-Package -sdk appletvsimulator16.0 -destination "OS=16.0,name=Apple TV 4K (2nd generation)"
