--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,4 +1,4 @@
-name: "Automatic: Unit Tests: Xcode 14, watchOS 9, tvOS 16"
+name: "Manual: Unit Tests: Xcode 14, watchOS 9, tvOS 16"
 on: [workflow_dispatch]
 
 jobs:
