--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,15 +7,15 @@ on:
 
 jobs:
   run_tests:
-    runs-on: macos-latest
+    runs-on: macos-12
     name: "Xcode 14: Execute Unit Tests"
     steps:
     - uses: actions/checkout@v3
     - name: "Xcode Select"
       run: sudo xcode-select -switch /Applications/Xcode_14.2.app && /usr/bin/xcodebuild -version
     - name: "macOS 13"
-      run: xcodebuild test -scheme Umbrella-Package -sdk macosx13.0 -destination "platform=macOS,arch=x86_64"
+      run: xcodebuild test -scheme Umbrella-Package -sdk macosx13.1 -destination "platform=macOS,arch=x86_64"
     - name: "macOS 13 (Mac Catalyst)"
-      run: xcodebuild test -scheme Umbrella-Package -sdk macosx13.0 -destination "platform=macOS,arch=x86_64,variant=Mac Catalyst"
+      run: xcodebuild test -scheme Umbrella-Package -sdk macosx13.1 -destination "platform=macOS,arch=x86_64,variant=Mac Catalyst"
     - name: "iOS 16"
-      run: xcodebuild test -scheme Umbrella-Package -sdk iphonesimulator16.1 -destination "OS=16.1,name=iPhone 8"
+      run: xcodebuild test -scheme Umbrella-Package -sdk iphonesimulator16.2 -destination "OS=16.2,name=iPhone 8"
